<resources>
    <string name="app_name">Bus Ticket</string>
    <string name="google_server_client_id">730726216500-ho7cam0dggst2024llbv1gg1jumt8ksp.apps.googleusercontent.com</string>

    <string name="account_already_exists">Conta já existe.</string>
    <string name="error_creating_account">Erro ao criar conta.</string>
    <string name="required">Obrigatório.</string>
    <string name="date_invalid">Esta data já passou.</string>
    <string name="different_passwords">Senhas diferentes.</string>
    <string name="my_profile"><u>Meu perfil</u></string>
    <string name="change_photo"><u>Alterar foto</u></string>
    <string name="logout"><u>Sair</u></string>
    <string name="authentication_failed">Falha na autenticação.</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nome</string>
    <string name="hint_password">Senha</string>
    <string name="sign_in">Login</string>
    <string name="create_account">Criar conta</string>
    <string name="sign_in_with_google">Login com Google</string>
    <string name="welcome_to_our_app">Bem-vindo ao nosso aplicativo!</string>
    <string name="create_an_account">Crie uma conta!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Já tem uma conta?</string>
    <string name="create_trip">Cadastrar\nviagem</string>
    <string name="my_trips">Minhas\nviagens</string>
    <string name="choose_account_type">Escolha o seu tipo de conta</string>
    <string name="driver">Motorista</string>
    <string name="passenger">Passageiro</string>
    <string name="next">Continuar</string>
    <string name="wrong_email_or_password">Email ou senha incorretos</string>
    <string name="some_error_has_occurred">Algum erro ocorreu</string>
    <string name="error_updating_email">Não foi possível atualizar o email, tente novamente fazendo um novo login!</string>
    <string name="new_trip">Nova viagem</string>
    <string name="your_trips">Suas viagens</string>
    <string name="hour_and_minute">%1$dh%2$d</string>
    <string name="details"><u>DETALHES</u></string>

    <string name="my_trip_origin">Origem: %1$s</string>
    <string name="my_trip_date">Data: %1$s</string>
    <string name="my_trip_destination">Destino: %1$s</string>
    <string name="my_trip_departure_time">Saída: %1$s</string>
    <string name="my_trip_arrival_time">Chegada: %1$s</string>
    <string name="my_trip_number_of_seats">Total de assentos: %1$d</string>
    <string name="my_trip_available_seats">Vagas disponíveis: %1$d</string>
    <string name="my_trip_num_passengers">Núm. de passageiros: %1$d</string>

    <string name="success">Sucesso</string>

    <string name="profile_picture_changed">Foto do perfil alterada!</string>
    <string name="search_trips">Buscar\nviagens</string>
    <string name="seats_unavailable">Vagas esgotadas</string>
    <string name="reservation_already_created">Você já possui uma reserva nessa viagem!</string>
    <string name="my_trips_fragment_label">Minhas viagens</string>
    <string name="cancel_trip">Cancelar viagem?</string>
    <string name="cancel_trip_dialog_message">Ao cancelar você perderá sua reserva!</string>
    <string name="proceed">Prosseguir</string>
    <string name="go_back">Voltar</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="verification_email_sent">Um email de verificação foi enviado ao novo email.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_edit_profile">Editar perfil</string>
    <string name="menu_change_photo">Alterar foto</string>
    <string name="menu_sign_out">Sair</string>
    <string name="weekly">Recorrência: Semanal</string>
    <string name="daily">Recorrência: Diária</string>
    <string name="no_recurrence">Recorrência: Sem recorrência</string>
    <string name="tab_history">Histórico</string>
    <string name="tab_next">Próximas</string>
    <string name="tab_recurrences">Recorrentes</string>
</resources>