<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.DriverHomeFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="?colorOnBackground"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/baseline_person_24"
        app:shapeAppearanceOverlay="@style/Theme.ShapeAppearanceOverlay.App.RoundedImageView"
        app:srcCompat="?colorOnBackground" />

    <TextView
        android:id="@+id/btn_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/profile_picture"
        android:layout_toStartOf="@id/divider"
        android:clickable="true"
        android:text="@string/my_profile"
        android:background="?attr/selectableItemBackground"
        android:textSize="16sp"
        android:textColor="?colorOnBackground" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/btn_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/profile_picture"
        android:layout_toEndOf="@id/divider"
        android:clickable="true"
        android:text="@string/change_photo"
        android:background="?attr/selectableItemBackground"
        android:textSize="16sp"
        android:textColor="?colorOnBackground" />

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_change_photo"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/logout"
        android:background="?attr/selectableItemBackground"
        android:textSize="16sp"
        android:textColor="?colorOnBackground" />

    <TextView
        android:id="@+id/create_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_logout"
        android:layout_toStartOf="@id/divider"
        android:clickable="true"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minHeight="140dp"
        android:minWidth="84dp"
        android:text="@string/create_trip"
        android:background="@drawable/home_big_button_border"
        android:backgroundTint="?colorTertiaryContainer"
        android:textStyle="bold"
        android:textColor="?colorOnTertiaryContainer"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/baseline_directions_car_24"
        app:drawableTint="?colorOnTertiaryContainer" />

    <TextView
        android:id="@+id/my_travels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btn_logout"
        android:layout_toEndOf="@id/divider"
        android:clickable="true"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minHeight="140dp"
        android:minWidth="84dp"
        android:text="@string/my_trips"
        android:background="@drawable/home_big_button_border"
        android:backgroundTint="?colorTertiaryContainer"
        android:textStyle="bold"
        android:textColor="?colorOnTertiaryContainer"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/baseline_card_travel_24"
        app:drawableTint="?colorOnTertiaryContainer" />
</RelativeLayout>