<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    tools:context=".ui.UserDetailDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_20"
        android:backgroundTint="?android:colorBackground"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baseline_person_24"
            app:shapeAppearanceOverlay="@style/Theme.ShapeAppearanceOverlay.App.RoundedImageView"
            app:srcCompat="?colorOnBackground" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/profile_picture"
            android:enabled="false"
            android:hint="@string/hint_name"
            android:textColor="?colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/field_name"
            android:enabled="false"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/field_email"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:text="@string/save"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/field_email"
            android:layout_centerHorizontal="true"
            android:text="@string/edit"
            android:textAllCaps="false" />

    </RelativeLayout>
</RelativeLayout>