<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:label="LoginFragment"
        android:name="com.cleios.busticket.ui.LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_driverHomeFragment"
            app:destination="@id/driverHomeFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_accountTypeRouterFragment"
            app:destination="@id/accountTypeRouterFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:label="RegisterFragment"
        android:name="com.cleios.busticket.ui.RegisterFragment">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_driverHomeFragment"
            app:destination="@id/driverHomeFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_accountTypeRouterFragment"
            app:destination="@id/accountTypeRouterFragment" />
    </fragment>

    <fragment
        android:id="@+id/driverHomeFragment"
        android:label="HomeFragment"
        android:name="com.cleios.busticket.ui.DriverHomeFragment">
        <action
            android:id="@+id/action_driverHomeFragment_to_driverTripsFragment"
            app:destination="@id/driverTripsFragment" />
        <action
            android:id="@+id/action_driverHomeFragment_to_newTripFragment"
            app:destination="@id/newTripFragment" />
        <action
            android:id="@+id/action_driverHomeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/accountTypeRouterFragment"
        android:label=""
        android:name="com.cleios.busticket.ui.AccountTypeRouterFragment"
        tools:layout="@layout/fragment_account_type_router">
        <action
            android:id="@+id/action_accountTypeRouterFragment_to_driverHomeFragment"
            app:destination="@id/driverHomeFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_accountTypeRouterFragment_to_loginFragment"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_accountTypeRouterFragment_to_passengerHomeFragment"
            app:destination="@id/passengerHomeFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/driverTripsFragment"
        android:label="@string/your_trips"
        android:name="com.cleios.busticket.ui.DriverTripsFragment">
        <action
            android:id="@+id/action_driverTripsFragment_to_newTripFragment"
            app:destination="@id/newTripFragment" />
    </fragment>
    <fragment
        android:id="@+id/newTripFragment"
        android:label="@string/new_trip"
        android:name="com.cleios.busticket.ui.NewTripFragment" />
    <fragment
        android:id="@+id/passengerHomeFragment"
        android:label="PassengerHomeFragment"
        android:name="com.cleios.busticket.ui.PassengerHomeFragment">
        <action
            android:id="@+id/action_passengerHomeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_passengerHomeFragment_to_searchTripsFragment"
            app:destination="@id/searchTripsFragment" />
        <action
            android:id="@+id/action_passengerHomeFragment_to_passengerTripsFragment"
            app:destination="@id/passengerTripsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchTripsFragment"
        android:label="@string/search_trips"
        android:name="com.cleios.busticket.ui.SearchTripsFragment"
        tools:layout="@layout/fragment_search_trips" />
    <fragment
        android:id="@+id/passengerTripsFragment"
        android:label="@string/my_trips_fragment_label"
        android:name="com.cleios.busticket.ui.PassengerTripsFragment" />
</navigation>